Added Landing Page for Website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+      <meta charset="utf-8">
+      <title>Dropdown Menu 03</title>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link
+          href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+          rel="stylesheet"
+      >
+      <link rel="stylesheet" href="style.css">
+    </head>
+
+      <body>
+      <nav class="accordion-container">
+        <div class="main-item">
+
+          <h1> Abraham Olakunle Ajibade </h1>
+
+        </div>
+        <ul>
+            <li>
+              <div class="line-vertical"></div>
+              <div class="line-horizontal"></div>
+              <a href="#income" title="Income">
+                Resume
+              </a>
+            </li>
+
+            <li>
+              <div class="line-vertical"></div>
+              <div class="line-horizontal"></div>
+              <a href="#expenses" title="Expense">
+                Projects
+              </a>
+            </li>
+
+            <li>
+              <div class="line-vertical"></div>
+              <div class="line-horizontal"></div>
+              <a href="#statements" title="Statements">
+                Contact
+              </a>
+            </li>
+
+            <li>
+              <div class="line-vertical"></div>
+              <div class="line-horizontal"></div>
+              <a href="#statements" title="Statements">
+                Fun Facts
+              </a>
+            </li>
+
+        </ul>
+      </nav>
+      <script src="script.js"></script>
+    </body>
+</html>
