README.md and Index.html
Added README.md file for the GitHub Profile and Completed Landing Page for Personal Website

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
       <meta charset="utf-8">
-      <title>Dropdown Menu 03</title>
+      <title>Abraham Ajibade Website</title>
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link
@@ -15,15 +15,18 @@
       <body>
       <nav class="accordion-container">
         <div class="main-item">
-
+        <div align="center">
           <h1> Abraham Olakunle Ajibade </h1>
+
+          <h4 align="center"> Data Analyst | Data Scientist | Machine Learning Engineer </h4>
+        </div>
 
         </div>
         <ul>
             <li>
               <div class="line-vertical"></div>
               <div class="line-horizontal"></div>
-              <a href="#income" title="Income">
+              <a href="#resume" title="Resume">
                 Resume
               </a>
             </li>
@@ -31,7 +34,7 @@
             <li>
               <div class="line-vertical"></div>
               <div class="line-horizontal"></div>
-              <a href="#expenses" title="Expense">
+              <a href="#projects" title="Projects">
                 Projects
               </a>
             </li>
@@ -39,7 +42,7 @@
             <li>
               <div class="line-vertical"></div>
               <div class="line-horizontal"></div>
-              <a href="#statements" title="Statements">
+              <a href="#contact" title="Contact">
                 Contact
               </a>
             </li>
@@ -47,7 +50,7 @@
             <li>
               <div class="line-vertical"></div>
               <div class="line-horizontal"></div>
-              <a href="#statements" title="Statements">
+              <a href="#funfacts" title="Funfacts">
                 Fun Facts
               </a>
             </li>
