--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#skills" class="nav-link">Skills</a></li>
                 <li><a href="#projects" class="nav-link">Projects</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
-                <li><a href="Abraham Ajibade Resume 112025.pdf" class="nav-link resume-btn" target="_blank">Resume</a></li>
+                <li><a href="documents/Abraham Ajibade Resume 112025.pdf" class="nav-link resume-btn" target="_blank">Resume</a></li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
@@ -39,7 +39,7 @@
             </p>
             <div class="hero-buttons">
                 <a href="#contact" class="btn btn-primary">Get In Touch</a>
-                <a href="Abraham Ajibade Resume 112025.pdf" class="btn btn-secondary" target="_blank">
+                <a href="documents/Abraham Ajibade Resume 112025.pdf" class="btn btn-secondary" target="_blank">
                     <i class="fas fa-file-alt"></i> View Resume
                 </a>
             </div>
@@ -336,7 +336,7 @@
             <h2 class="section-title">Get In Touch</h2>
             <div class="contact-content">
                 <p class="contact-text">
-                    I'm currently open to new opportunities and collaborations. 
+                    I am always open to new opportunities and collaborations.
                     Whether you have a question, want to work together, or just want to say hi, 
                     feel free to reach out!
                 </p>
@@ -354,7 +354,7 @@
                         <span>GitHub</span>
                     </a>
                 </div>
-                <a href="Abraham Ajibade Resume 112025.pdf" class="btn btn-primary resume-download" target="_blank">
+                <a href="documents/Abraham Ajibade Resume 112025.pdf" class="btn btn-primary resume-download" target="_blank">
                     <i class="fas fa-download"></i> Download Resume
                 </a>
             </div>
