--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="hero-content">
             <p class="hero-greeting">Hello, I'm</p>
             <h1 class="hero-name">Abraham Ajibade</h1>
-            <h2 class="hero-title">Machine Learning and AI Engineer</h2>
+            <h2 class="hero-title">Artificial Intelligence & Machine Learning Engineer</h2>
             <p class="hero-description">
                 Passionate about deploying artificial intelligence and machine learning models for real-world impact.
             </p>
