--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
                     <span class="dot red"></span>
                     <span class="dot yellow"></span>
                     <span class="dot green"></span>
-                    <span class="code-filename">me.py</span>
+                    <span class="code-filename">abraham.py</span>
                 </div>
                 <pre class="code-content">
 <code><span class="variable">abraham</span> = {
     <span class="string">"name"</span>: <span class="string">"Abraham Ajibade"</span>,
-    <span class="string">"role"</span>: <span class="string">"ML &amp; AI Engineer"</span>,
+    <span class="string">"role"</span>: <span class="string">"AI &amp; ML Engineer"</span>,
     <span class="string">"fuel"</span>: <span class="string">"☕ + 🎵"</span>,
     <span class="string">"currently"</span>: <span class="string">"Deploying models"</span>,
     <span class="string">"motto"</span>: <span class="string">"Ship it, Optimize it!"</span>
