update skills cards

--- a/index.html
+++ b/index.html
@@ -283,9 +283,10 @@
                         <p class="item-company"><img src="assets/icons/briefcase.svg" alt="Company" class="icon">Gidi Mobile</p>
                         <p class="item-location"><img src="assets/icons/location.svg" alt="Location" class="icon"> Victoria Island, Lagos, Nigeria</p>
                         <div class="item-tags">
-                            <span>Content</span>
-                            <span>Learning</span>
-                            <span>Internship</span>
+                            <span>Web Content Development</span>
+                            <span>Content Research</span>
+                            <span>Content Development</span>
+                            <span>Education Policy</span>
                         </div>
                         <span class="timeline-date"><img src="assets/icons/calendar.svg" alt="Date" class="icon date-icon">January 2019 - December 2018</span>
                     </div>
